Define the problem matcher $gnat
It covers both cases, all of $gcc defined in vscode-cpptools, and the
messages having no severity.
C/C++ and Ada extensions will be used in the same time, so later one
should have different name.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,22 @@
             "language": "ada",
             "scopeName": "source.ada",
             "path": "syntaxes/ada.json"
+        }],
+        "problemMatchers": [{
+            "name": "gnat",
+            "owner": "ada-highlight",
+            "fileLocation": [
+                "relative",
+                "${workspaceFolder}"
+            ],
+            "pattern": {
+                "regexp": "^(.*):(\\d+):(\\d+):\\s+(?:(warning|error):\\s+)?(.*)$",
+                "file": 1,
+                "line": 2,
+                "column": 3,
+                "severity": 4,
+                "message": 5
+            }
         }]
     }
 }
