Add snippets for the entities in the package Standard

--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
             },
             {
                 "language": "ada",
+                "path": "./snippets/standard.json"
+            },
+            {
+                "language": "ada",
                 "path": "./snippets/predefined.json"
             }
         ]
