Insert "notIn" into "autoClosingPairs" for the strings

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -13,8 +13,8 @@
     "autoClosingPairs": [
         ["(", ")"],
         ["[", "]"],
-        ["\"", "\""],
-        ["%", "%"]
+        {"open": "\"", "close": "\"", "notIn": ["string", "comment"]},
+        {"open": "%", "close": "%", "notIn": ["string", "comment"]},
     ],
     // symbols that that can be used to surround a selection
     "surroundingPairs": [
