Add snippets for the language-defined attributes

--- a/package.json
+++ b/package.json
@@ -45,6 +45,10 @@
             },
             {
                 "language": "ada",
+                "path": "./snippets/attributes.json"
+            },
+            {
+                "language": "ada",
                 "path": "./snippets/standard.json"
             },
             {
